Adding entities estado, distrito, municipio, ruta (basic jhipster)

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -28,6 +28,14 @@
                                 </span>
                     </a>
                     <ul class="dropdown-menu">
+                        <li ui-sref-active="active" ><a ui-sref="estado"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.estado">estado</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="distrito"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.distrito">distrito</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="municipio"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.municipio">municipio</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="ruta"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.ruta">ruta</span></a></li>
                         <!-- JHipster will add entities to the menu here -->
                     </ul>
                 </li>
