--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -36,6 +36,10 @@
                         &#xA0;<span translate="global.menu.entities.municipio">municipio</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="ruta"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.ruta">ruta</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="seccion"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.seccion">seccion</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="partidosPoliticos"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.partidosPoliticos">partidosPoliticos</span></a></li>
                         <!-- JHipster will add entities to the menu here -->
                     </ul>
                 </li>
