added elector entity

--- a/src/main/webapp/scripts/components/navbar/navbar.html
+++ b/src/main/webapp/scripts/components/navbar/navbar.html
@@ -40,6 +40,8 @@
                         &#xA0;<span translate="global.menu.entities.seccion">seccion</span></a></li>
                         <li ui-sref-active="active" ><a ui-sref="partidosPoliticos"><span class="glyphicon glyphicon-asterisk"></span>
                         &#xA0;<span translate="global.menu.entities.partidosPoliticos">partidosPoliticos</span></a></li>
+                        <li ui-sref-active="active" ><a ui-sref="elector"><span class="glyphicon glyphicon-asterisk"></span>
+                        &#xA0;<span translate="global.menu.entities.elector">elector</span></a></li>
                         <!-- JHipster will add entities to the menu here -->
                     </ul>
                 </li>
